[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CRRM"
version = "2.0"
authors = [
  { name="Keith Briggs", email="k.briggs73@btinternet.com" },
]
description = "CRRM 5G system-level simulator"
keywords = ["5G", "cellular radio", "simulation",]
"Bug Tracker" = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.6",
]

[project.urls]
homepage = ""
documentation = ""
